Fixed center styling on admin pages by wrapping Header and Body content in a div with class .header-content-wrapper

--- a/SRC/NTC_Lego/NTC_Lego/Client/Shared/MainLayout.razor.css
+++ b/SRC/NTC_Lego/NTC_Lego/Client/Shared/MainLayout.razor.css
@@ -1,3 +1,7 @@
+.header-content-wrapper {
+    width: 100%;
+}
+
 .site-header {
     border-bottom: 1px solid #EDEDED;
     height: 70px;
